--- a/templates/members.html
+++ b/templates/members.html
@@ -1,3 +1,6 @@
+<button type="button" class="btn btn-secondary mr-3" ng-click="editAndAddEmp('add')">+
+    Add</button>
+
 <!-- Modal -->
 <div class="modal fade" id="memberAddModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
