--- a/templates/home.html
+++ b/templates/home.html
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                 </div>
-                <h4 class="text-center text-danger" ng-if="createdGroupList.length == 0">Error</h4>
+                <h4 class="text-center text-danger" ng-if="createdGroupList.length == 0">No data found...</h4>
             </div>
         </div>
     </div>
