--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ body {
     border-width: 2px;
     border-color: #b9b9b9;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.4);
-    border-radius: 0;
+    border-radius: 25px;
     display: inline-block;
     width: 30%;
     height: 40px;
