--- a/css/style.css
+++ b/css/style.css
@@ -45,12 +45,13 @@ body {
 }
 
 .backdrop {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.1);
     position: fixed;
     bottom: 0;
     top: 0;
     left: 0;
     right: 0;
+    opacity: 0.5;
     z-index: 1;
 }
 
